background track for car is done

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <img src="/Images/playGame.png" alt="Play Game">
         
     </div>
+    <div id="cur_score"><h1>YOUR SCORE</h1>0</div>
+    <div id="high_score"><h1>HIGH SCORE</h1> 0</div>
     <canvas id="canvas"></canvas>
+    <script src="/JS/app.js"></script>
 </body>
 </html>
