restart portion done with improved collision

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="restartMenu">
         <p>2 Cars</p>
         <p>Let's play,Use left and right key to play the game</p>
-        <img src="/Images/restartGame.png" alt="Play Game" id="playbutton" onclick="playbutton()">  
+        <img src="/Images/restartGame.png" alt="Restart Game" id="restartbutton" onclick="restartbutton()" >  
     </div>
     <!------Car score and High Score Display------>
     <div id="car_score"><h1>YOUR SCORE</h1>0</div>
@@ -30,3 +30,12 @@
     <script src="/JS/app.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
