Your score counter added, rectange shape fixed

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <img src="/Images/restartGame.png" alt="Restart Game" id="restartbutton" onclick="restartbutton()" >  
     </div>
     <!------Car score and High Score Display------>
-    <div id="car_score"><h1>YOUR SCORE</h1>0</div>
-    <div id="high_score"><h1>HIGH SCORE</h1> 0</div>
+    <div id="car_score" ><h1>YOUR SCORE</h1><h1 id="score">0</h1></div>
     <!------Canvas for game-->
     <canvas id="canvas"></canvas>
     <!-------JavaScript File-->
