audio added and bugs fixed

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <img src="/Images/playGame.png" alt="Play Game" id="playbutton" onclick="playbutton()">
         
     </div>
+    <!-----Sounds------------>
+    <div class="sound">
+        <img src="audio/icons8-audio-100.png" alt="" id="sound">
+    </div>
     <!-------Restart Menu---------->
     <div id="restartMenu">
         <p>2 Cars</p>
