Speed increase func added and Game rules added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <!----Start Menu----->
     <div id="startMenu">
         <p>2 Cars</p>
-        <p>Let's play,Use left and right key to play the game</p>
+        <p>Let's play,Use left and right key to move the car in opposite lane</p>
+        <p>Rules Of Game</p>
+        <ul>
+            <li>You have to use both the cars simultaneously</li>
+            <li>Beaware of the boxes</li>
+            <li>Collect all the circles</li>
+            <li>Don't forget to have fun</li>
+        </ul>
         <img src="/Images/playGame.png" alt="Play Game" id="playbutton" onclick="playbutton()">
         
     </div>
