--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <li>Don't forget to have fun</li>
         </ul>
         <img src="/Images/playGame.png" alt="Play Game" id="playbutton" onclick="playbutton()">
-        
+        <button type="button" id="lvl1">Easy</button>
+        <button type="button" id="lvl2" onclick="speed_counter = 15">Hard</button>
     </div>
     <!-----Sounds------------>
     <div class="sound">
