HomePage and RestartPage UI improved,Your Score end display added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <!-------Restart Menu---------->
     <div id="restartMenu">
         <p>2 Cars</p>
-        <p>Let's play,Use left and right key to play the game</p>
+        <p>Oops!! Game Over</p>
+        <p>Your Score:- <h1 id="endscore">0</h1></p>
         <img src="/Images/restartGame.png" alt="Restart Game" id="restartbutton" onclick="restartbutton()" >  
     </div>
     <!------Car score and High Score Display------>
