--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>2 Cars</title>
     <!-------Stylesheet----->
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 <body>
     <!----Start Menu----->
-    <div id="startMenu">
+    <div id="startMenu">c
         <p>2 Cars</p>
         <p>Let's play,Use left and right key to move the car in opposite lane</p>
         <p>Rules Of Game</p>
@@ -39,7 +40,7 @@
     <!------Canvas for game-->
     <canvas id="canvas"></canvas>
     <!-------JavaScript File-->
-    <script src="/JS/app.js"></script>
+    <script src="JS/app.js" type="text/javascript"></script>
 </body>
 </html>
 
