fixed image loading issues

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li>Collect all the circles</li>
             <li>Don't forget to have fun</li>
         </ul>
-        <img src="/Images/playGame.png" alt="Play Game" id="playbutton" onclick="playbutton()">
+        <img src="Images/playGame.png" alt="Play Game" id="playbutton" onclick="playbutton()">
         <button type="button" id="lvl1" onclick="speed_counter = 25">Easy</button>
         <button type="button" id="lvl2" onclick="speed_counter = 15">Hard</button>
     </div>
@@ -33,7 +33,7 @@
         <p>2 Cars</p>
         <p>Oops!! Game Over</p>
         <p>Your Score:- <h1 id="endscore">0</h1></p>
-        <img src="/Images/restartGame.png" alt="Restart Game" id="restartbutton" onclick="restartbutton()" >  
+        <img src="Images/restartGame.png" alt="Restart Game" id="restartbutton" onclick="restartbutton()" >  
     </div>
     <!------Car score and High Score Display------>
     <div id="car_score" ><h1>YOUR SCORE</h1><h1 id="score">0</h1></div>
